<resources>
    <string name="app_name">Cosmetic</string>
    <string name="app_name_2">Coco</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="no_internet">Cannot connect to server</string>
    <string name="no_internet_detail">Server are down or check your internet connection and try again</string>
    <string name="try_again">Try again</string>

    <string name="search_cosmetic">Search Cosmetic</string>
    <string name="pick_for_you">Pick for you</string>

    <string name="home_nav">Home</string>
    <string name="search_nav">Search</string>
    <string name="desk_nav">Desk</string>
    <string name="package_nav">Package</string>
    <string name="me_nav">Me</string>
</resources>
